# level

./: .pre-commit-config.yaml  pyproject.toml
data/: levels.csv
level/: helpers.py  main.py
