[tool.poetry]
name = "level"
version = "0.1.0"
description = ""
authors = ["fhebal <ferdynandhebal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.9"
pandas = "^2.2.3"
pre-commit = "^4.1.0"
streamlit = "^1.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
